feat: add admin lucro configuration
